# meu_projeto

./: pyproject.toml
.github/workflows/: publish-to-pypi.yml
pyG12/: main.py
